# SingletoneWithStaticLib

./: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h  CMakeLists.txt  README.md  main.cpp
